# OpenClawer

./: LICENSE  README.md  pyproject.toml
datapipe/: __init__.py  cli.py  core.py  tierlib.py
openclawer/: __init__.py  cli.py  core.py
templates/: sources.example.yaml
