[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datapipe"
version = "0.1.0"
description = "Portable collect->clean->cross-check->update engine for multi-source verified datasets"
requires-python = ">=3.8"
dependencies = []                       # core is stdlib-only

[project.optional-dependencies]
yaml = ["pyyaml>=5"]                     # enables reading authority_tiers from sources.yaml

[project.scripts]
datapipe = "datapipe.cli:main"

[tool.setuptools]
packages = ["datapipe"]
