[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openclawer"
version = "0.1.0"
description = "Portable collect->clean->cross-check->update engine for multi-source verified datasets"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "C.Mei" }]
dependencies = []                       # core is stdlib-only

[project.optional-dependencies]
yaml = ["pyyaml>=5"]                     # enables reading authority_tiers from sources.yaml

[project.urls]
Homepage = "https://github.com/chengchengmay1995-svg/OpenClawer"

[project.scripts]
openclawer = "openclawer.cli:main"

[tool.setuptools]
packages = ["openclawer"]
